argo-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-server
  namespace: argo
spec:
  type: NodePort # update for external exposure
  ports:
  - name: web
    port: 2746
    targetPort: 2746
    nodePort: 32100 # port for nginx to point to 
  selector:
    app: argo-server
