ingress-argoflow.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argoflow-ingress
  namespace: argo
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
  - host: "argo-dev.conamur-software.com"
    http:
      paths:
      - path: /
        pathType: Prefix 
        backend:
          service:
            name: argo-server
            port:
              number: 2746
